further improve home_page displayed computers and register.